Spacing corrections by editor.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a, a:hover, a:visited {
     color: #333333;
 }
 
-    
+
 .navbar-default {
     background-color: #333333;
     border: #333333;
@@ -89,10 +89,10 @@ a, a:hover, a:visited {
     height: 100%;
 }
 
-#welcome .vert-center { 
-    display: table-cell; 
-    vertical-align: middle; 
-    text-align: center; 
+#welcome .vert-center {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
 
 #main-image {
@@ -122,4 +122,10 @@ a, a:hover, a:visited {
 
 #contact a {
     color: #ffffff;
+}
+
+.btn-no-style {
+    background: none;
+    border: none;
+    padding: 0;
 }
